<resources>
    <string name="app_name">Quottable</string>
    <string name="default_quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</string>
    <string name="default_attribution">~ anon</string>
    <string name="title_quote_activity">Say it with Quottable</string>
    <string name="share_tooltip">Share Quote</string>
    <string name="edit_tooltip">Toggle Edit</string>
    <string name="fonts_tooltip">Cycle Fonts</string>
    <string name="colors_tooltip">Cycle Background Colours</string>
    <string name="quote_content_description">Quote</string>
    <string name="backgrounds_tooltip">Cycle Backgrounds</string>
    <string name="size_tooltip">Cycle Font Sizes</string>
    <string name="watermark_text">said with Quottable</string>
    <string name="add_image_tooltip">Add image</string>
    <string name="quote_hint">Say something…</string>
</resources>
