<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_edit_text"
        android:title="@string/edit_tooltip"
        android:icon="@drawable/ic_edit_black"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_cycle_backgrounds"
        android:title="@string/backgrounds_tooltip"
        android:icon="@drawable/ic_color_black"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_cycle_fonts"
        android:title="@string/fonts_tooltip"
        android:icon="@drawable/ic_font_black"
        app:showAsAction="always"/>
    <item android:id="@+id/menu_pick_image"
        android:title="@string/add_image_tooltip"
        android:icon="@drawable/ic_add_photo"
        app:showAsAction="always"/>
</menu>