<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clImageQuote"
        android:layout_width="@dimen/pictureSide"
        android:layout_height="@dimen/pictureSide"
        android:layout_gravity="center|top"
        android:layout_margin="@dimen/marginSmall"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/quote_content_description" />
        <ImageView
            android:id="@+id/ivPatternOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/quottable_pattern_2"
            android:tint="@color/whiteTint"
            android:tintMode="src_in"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/quote_content_description" />
        <EditText
            android:id="@+id/etQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_quote"
            android:textSize="@dimen/textLarge"
            android:padding="@dimen/paddingLarge"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:shadowColor="@color/blackTint"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="@id/ivBackground"
            app:layout_constraintLeft_toLeftOf="@id/ivBackground"
            app:layout_constraintRight_toRightOf="@id/ivBackground"
            app:layout_constraintTop_toTopOf="@id/ivBackground"
            app:layout_constraintVertical_bias="0.2"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/tvWatermark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watermark_text"
            android:textColor="@color/watermarkTint"
            android:textSize="20sp"
            android:background="@color/blackTint"
            android:padding="@dimen/marginSmall"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/ivWatermark"
            app:layout_constraintBottom_toBottomOf="@id/ivBackground"/>
        <EditText
            android:id="@+id/tvAttribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="by Someone Special"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:enabled="false"
            android:textAlignment="viewEnd"
            android:gravity="end"
            android:layout_margin="@dimen/marginSmall"
            app:layout_constraintBottom_toTopOf="@id/tvWatermark"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/ivWatermark"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher_round"
            android:tint="@color/whiteTint"
            android:padding="@dimen/marginSmall"
            app:layout_constraintEnd_toEndOf="@id/ivBackground"
            app:layout_constraintBottom_toBottomOf="@id/ivBackground"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/lvGallery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/galleryHeight"
        android:layout_margin="@dimen/marginSmall"
        android:numColumns="3"
        android:scrollbars="none"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/clImageQuote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/transparent"
        android:layout_margin="@dimen/marginSmall"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:src="@drawable/ic_share_black"
            android:contentDescription="@string/share_tooltip"
            android:tooltipText="@string/share_tooltip"/>
        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:src="@drawable/ic_edit_black"
            android:contentDescription="@string/edit_tooltip"
            android:tooltipText="@string/edit_tooltip"/>
        <ImageButton
            android:id="@+id/btnBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:src="@drawable/ic_image_black"
            android:contentDescription="@string/backgrounds_tooltip"
            android:tooltipText="@string/backgrounds_tooltip"/>
        <ImageButton
            android:id="@+id/btnFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:src="@drawable/ic_font_black"
            android:contentDescription="@string/fonts_tooltip"
            android:tooltipText="@string/fonts_tooltip"/>
        <ImageButton
            android:id="@+id/btnSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:src="@drawable/ic_font_size_black"
            android:contentDescription="@string/size_tooltip"
            android:tooltipText="@string/size_tooltip"/>
        <ImageButton
            android:id="@+id/btnColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:src="@drawable/ic_color_black"
            android:contentDescription="@string/colors_tooltip"
            android:tooltipText="@string/colors_tooltip"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>